removed drinking age/language

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -82,7 +82,7 @@
         </div>
 
         <!-- Language and Drinking Age Inputs -->
-        <div class=row>
+        <!-- <div class=row>
             <div class="form-group  col-sm-2 offset-sm-4">
                 <label for="languageInput">Language</label>
                 <input type="text" class="form-control" id="languageInput" name="language" placeholder="Spanish">
@@ -97,7 +97,7 @@
                     What would you like the drinking age of the destination to be?
                 </small>
             </div>
-        </div>
+        </div> -->
 
         <!-- Submit button -->
         <div style="display: flex; justify-content: center;">
