Edited placeholder text for frontend

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -44,7 +44,7 @@
             <div class="form-group col-sm-4 offset-sm-4">
                 <label for="activitiesInput">Activities</label>
                 <input type="text" class="form-control" id="activitiesInput" name="activities"
-                    placeholder="Skydiving, Kayaking, Hiking">
+                    placeholder="Kayaking, Hiking">
                 <small id="activitiesHelp" class="form-text text-muted">
                     List out activities that you're interested in doing on your trip!
                 </small>
@@ -67,7 +67,7 @@
             <div class="form-group col-sm-2 offset-sm-4">
                 <label for="likesInput">Likes</label>
                 <input type="text" class="form-control" id="likesInput" name="likes"
-                    placeholder="Warm Weather, Mountains">
+                    placeholder="Cold, Mountains">
                 <small id="likesHelp" class="form-text text-muted">
                     What are some things you would like to have in the places you travel to?
                 </small>
@@ -75,7 +75,7 @@
             <div class="form-group col-sm-2">
                 <label for="dislikesInput">Dislikes</label>
                 <input type="text" class="form-control" id="dislikesInput" name="dislikes"
-                    placeholder="Mosquitos, Heavy Traffic">
+                    placeholder="Mosquito, Traffic">
                 <small id="dislikesHelp" class="form-text text-muted">
                     What are some things you would not like to have in the places you travel to?
                 </small>
