sentiment of each place in front end

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -118,6 +118,8 @@
                 <span>Similarity: {{ data[data_idx]['sim'] }}</span>
                 <span>     </span>
                 <span>Nicheness: {{ data[data_idx]['nicheness'] }}</span>
+                <span>     </span>
+                <span>Sentiment: {{ data[data_idx]['sentiment'] }}</span>
                 <br>
                 <br>
                 <!-- <p class="card-text">Location selected because it has:</p> -->
