--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,12 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
-    <script src="/static/bootstrap-tagsinput.js"></script>
     <script src="/static/topics.js"></script>
-    
     <!-- Required to run Bootstrap js (such as the collapse feature for Advanced Search -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -15,8 +10,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/main.css">
-    <link rel="stylesheet" href="/static/typeahead.css">
-    <link rel="stylesheet" href="/static/bootstrap-tagsinput.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <!-- https://www.w3schools.com/howto/howto_js_collapsible.asp -->
@@ -74,6 +67,18 @@
         background-color: rgba(255, 255, 255, 0.5);
     }
 
+    #dnm{
+        -webkit-animation: spin 2s infinite linear;
+        border-radius: 50%;
+        display: none;
+        margin-left:30px;
+    }
+
+    @-webkit-keyframes spin {
+    0%  {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}   
+}
+
 </style>
 
 <body>
@@ -96,7 +101,7 @@
         <!-- Advanced Search Toggle Button -->
         <div style="display: flex; justify-content: center;">
             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
-                Advanced Search
+                Toggle Advanced Search
             </button>
         </div>
 
@@ -156,21 +161,13 @@
         </div>
 
         <div class="mb-3"></div>
-
         <!-- Submit button -->
         <div style="display: flex; justify-content: center;">
-            <button type="submit" class="btn btn-success" style="text-align:center">Go!</button>
+            <button id = "submit" type="submit" class="btn btn-success" style="text-align:center">Go!</button>
+            <image id = "dnm" width="40px" height="40px" src="{{ url_for('static', filename='dnm.png') }}"></image>
         </div>
 
     </form>
-    <!-- <div class="row">
-        <div class="col-md-6 offset-md-3">
-            TEST TYPEAHEAD
-            <input id="test" class="typeahead" data-role="tagsinput"></input>
-            TEST TAG INPUT
-            <input data-role="tagsinput"></input>
-        </div>
-    </div> -->
 
     {% if data %}
     {% for data_idx in range(10) %}
@@ -221,24 +218,9 @@
         });
     }
 
-    //typeahead
-    var topics = new Bloodhound({
-        datumTokenizer: Bloodhound.tokenizers.obj.whitespace('name'),
-        queryTokenizer: Bloodhound.tokenizers.whitespace,
-        local: topicsList.map((t) => {
-            return {
-                "name": t
-            };
-        }),
-    });
-    topics.initialize();
-    $('#test').tagsinput({
-        typeaheadjs: {
-            name: 'topics',
-            displayKey: 'name',
-            valueKey: 'name',
-            source: topics.ttAdapter()
-        }
+    var submit = document.getElementById("submit");
+    submit.addEventListener("click", function (){
+        document.getElementById("dnm").setAttribute("style", "display:block;");
     });
 </script>
 
