--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Below three required to run Bootstrap js (such as the collapse feature for Advanced Search -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <!-- Above three required to run Bootstrap js (such as the collapse feature for Advanced Search -->
 </head>
 <!-- https://www.w3schools.com/howto/howto_js_collapsible.asp -->
@@ -67,18 +73,32 @@
         background-color: rgba(255, 255, 255, 0.5);
     }
 
-    #dnm{
+    #dnm {
         -webkit-animation: spin 2s infinite linear;
         border-radius: 50%;
         display: none;
-        margin-left:30px;
+        margin-left: 30px;
     }
 
     @-webkit-keyframes spin {
-    0%  {-webkit-transform: rotate(0deg);}
-    100% {-webkit-transform: rotate(360deg);}   
-}
+        0% {
+            -webkit-transform: rotate(0deg);
+        }
 
+        100% {
+            -webkit-transform: rotate(360deg);
+        }
+    }
+
+    label {
+        margin-left: 15px;
+        display: inline-block;
+    }
+
+    .badge {
+        background-color:gray;
+        color:white;
+    }
 </style>
 
 <body>
@@ -100,7 +120,8 @@
 
         <!-- Advanced Search Toggle Button -->
         <div style="display: flex; justify-content: center;">
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#advancedSearch" aria-expanded="true" aria-controls="advancedSearch">
+            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#advancedSearch"
+                aria-expanded="true" aria-controls="advancedSearch">
                 Toggle Advanced Search
             </button>
         </div>
@@ -139,7 +160,7 @@
                 </div>
             </div>
 
-                <!-- Language and Drinking Age Inputs -->
+            <!-- Language and Drinking Age Inputs -->
             <div class="row">
                 <div class="form-group  col-sm-2 offset-sm-4">
                     <label for="languageInput">Language</label>
@@ -158,13 +179,30 @@
                     </small>
                 </div>
             </div>
+            <div class="row">
+                <div class="form-group col-sm-4 offset-sm-4">
+                    <p>Search Method (select by clicking label)</p>
+                    <div class="form-check form-check-inline">
+                        <input id="radio1" type="radio" name="useNicheness" value="y" checked><label
+                            class="form-check-label text-muted" for="radio1">Similarity<span style="color:white">.</span>and<span
+                                style="color:white">.</span>Nicheness*</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input id="radio2" type="radio" name="useNicheness" value="n"><label
+                            class="form-check-label text-muted" for="radio2">Similarity<span style="color:white">.</span>Only</label>
+                    </div>
+                    <small id="useNichenessHelp" class="form-text text-muted">
+                        *Nicheness refers to our rating of how likely this place is a "hidden gem"
+                    </small>
+                </div>
+            </div>
         </div>
 
         <div class="mb-3"></div>
         <!-- Submit button -->
         <div style="display: flex; justify-content: center;">
-            <button id = "submit" type="submit" class="btn btn-success" style="text-align:center">Go!</button>
-            <image id = "dnm" width="40px" height="40px" src="{{ url_for('static', filename='dnm.png') }}"></image>
+            <button id="submit" type="submit" class="btn btn-success" style="text-align:center">Go!</button>
+            <image id="dnm" width="40px" height="40px" src="{{ url_for('static', filename='dnm.png') }}"></image>
         </div>
 
     </form>
@@ -176,21 +214,26 @@
             style='background-image:url({{ data[data_idx]["image"] }})'>
             <div>
                 <span>
-                    <h4 class="card-title"><a class = "content" href="{{ data[data_idx]['url'] }}">{{ data[data_idx]['name'] }}</a>  <span class = "badge">{{ data[data_idx]['type'] }}</span></h4>
+                    <h5 class="card-title"><a class="content"
+                            href="{{ data[data_idx]['url'] }}">{{ data[data_idx]['name'] }}</a> <span
+                            class="badge">{{ data[data_idx]['type'] }}</span></h4>
                 </span>
                 <span class=content>
-                    <span>Similarity Score: </span>
+                    <span>Similarity: </span>
                     {{ data[data_idx]['sim_stars']|safe }}
                     <br>
-                    <span> Nicheness Score: </span>
+                    <span> Relative Nicheness: </span>
                     {{ data[data_idx]['nicheness_stars']|safe }}
-                    <br>
-                    <br>
                     <br>
                 </span>
                 <!-- <p class="card-text">Location selected because it has:</p> -->
-                <span class="collapsible content">Toggle relevant comments</span>
+                <span class="collapsible content">Toggle Details</span>
                 <div class="collapsible-content">
+                    <p>Local Languages: <span class="text-muted">{{ data[data_idx]['languages'] }}</span></p>
+                    <p>Drinking Age: <span class="text-muted">{{ data[data_idx]['drinking'] }}</span></p>
+                    <p>Relevant Snippets from Reddit:
+                        <span style="color:#DAF7A6;font-size:25px">■</span> positive sentiment <span
+                            style="color:#FEE081;font-size:25px">■</span> neutral/negative sentiment</p>
                     {% for i in data[data_idx]['reviews'] %}
                     <p style='background-color:{{ "#DAF7A6" if i[1] >= 0.5 else "#FEE081" }}'>
                         {{ (i[0][:299] + "...") if i[0]|length > 299 else i[0] }}</p>
@@ -219,7 +262,7 @@
     }
 
     var submit = document.getElementById("submit");
-    submit.addEventListener("click", function (){
+    submit.addEventListener("click", function () {
         document.getElementById("dnm").setAttribute("style", "display:block;");
     });
 </script>
