--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -17,6 +17,48 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <!-- Above three required to run Bootstrap js (such as the collapse feature for Advanced Search -->
+
+    <!-- Below three required for autocomplete -->
+    <!-- Large portion of the next few lines of code taken from: http://jqueryui.com/autocomplete/#multiple -->
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        var availableTags = {{autocomplete_words}};
+        function split( val ) {
+            return val.split(/,\s*/);
+        }
+        function extractLast(term) {
+            return split(term).pop();
+        }
+        var autocomplete_config = {
+            minLength: 0,
+            source: function(request, response) {
+                // delegate back to autocomplete, but extract the last term
+                response($.ui.autocomplete.filter(
+                    availableTags, extractLast(request.term)));
+            },
+            focus: function() {
+                // prevent value inserted on focus
+                return false;
+            },
+            select: function( event, ui ) {
+                var terms = split( this.value );
+                // remove the current input
+                terms.pop();
+                // add the selected item
+                terms.push( ui.item.value );
+                // add placeholder to get the comma-and-space at the end
+                terms.push("");
+                this.value = terms.join( ", " );
+                return false;
+            }
+        }
+        $("#activitiesInput").autocomplete(autocomplete_specs);
+        $("#likesInput").autocomplete(autocomplete_specs);
+        $("#dislikesInput").autocomplete(autocomplete_specs);
+    </script>
+     <!-- Above three required for autocomplete -->
+
 </head>
 <!-- https://www.w3schools.com/howto/howto_js_collapsible.asp -->
 <style>
